@@ -1,3 +1,9 @@
+2008-01-07  Adele Peterson  <adele@apple.com>
+
+        Forgot to check in these changes in my last checkin.
+
+        * rendering/RenderThemeSafari.cpp:
+
 2008-01-07  Dan Bernstein  <mitz@apple.com>
 
         Build fixes.
